[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/Tiles/side_door1.png" type="Texture" id=1]
[ext_resource path="res://textures/Tiles/side_door2.png" type="Texture" id=2]
[ext_resource path="res://textures/Tiles/side_door3.png" type="Texture" id=3]
[ext_resource path="res://Obstacles/Guard/SideDoor.gd" type="Script" id=4]
[ext_resource path="res://audio/Tech-12.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "close",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.52864, 9.39789 )

[node name="SideDoor" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.420448, 0.420448 )
shape = SubResource( 2 )

[node name="OpenTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="OpenTimer" to="." method="_on_OpenTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
